--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/material": "^5.14.15",
     "@mui/x-data-grid": "^6.16.3",
     "@reduxjs/toolkit": "^1.9.0",
+    "@tanstack/react-query": "^5.18.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
