--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.15",
     "@mui/x-data-grid": "^6.16.3",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.405.0",
     "moment": "^2.29.4",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
@@ -23,6 +28,8 @@
     "react-toastify": "^9.1.1",
     "recharts": "^2.9.0",
     "styled-components": "^5.3.11",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -50,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^20.14.10",
     "tailwindcss": "^3.4.3"
   }
 }
