--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@iconify/react": "^5.0.1",
     "@mui/material": "^5.14.15",
     "@mui/x-data-grid": "^6.16.3",
     "@radix-ui/react-dialog": "^1.1.1",
