--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@iconify/react": "^5.0.1",
+    "@iconify/react": "^5.0.2",
     "@mui/material": "^5.14.15",
     "@mui/x-data-grid": "^6.16.3",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -21,6 +21,7 @@
     "moment": "^2.29.4",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-redux": "^8.0.5",
