--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@iconify/react": "^5.0.2",
     "@mui/material": "^5.14.15",
     "@mui/x-data-grid": "^6.16.3",
+    "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@reduxjs/toolkit": "^1.9.0",
